Spawn pipes further ahead.css

--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@
 }
 
 @-webkit-keyframes animPipe {
-   0% { left: 900px; }
+   0% { left: 900px; } /* Start further to the right */
    100% { left: -100px; }
 }
 @-moz-keyframes animPipe {
@@ -62,7 +62,7 @@
    100% { left: -100px; }
 }
 @keyframes animPipe {
-   0% { left: 900px; }
+   0% { left: 900px; } /* Start further to the right */
    100% { left: -100px; }
 }
 
@@ -83,18 +83,13 @@
    100% { background-position: -63px 0px; }
 }
 
-
 *,
 *:before,
-*:after
-{
-   /* border box */
+*:after {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
-   /* gpu acceleration */
    -webkit-transition: translate3d(0,0,0);
-   /* select disable */
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
@@ -104,8 +99,7 @@
 }
 
 html,
-body
-{
+body {
    height: 100%;
    overflow: hidden;
    font-family: monospace;
@@ -113,26 +107,21 @@ body
    color: #fff;
 }
 
-#gamecontainer
-{
+#gamecontainer {
    position: relative;
    width: 100%;
    height: 100%;
    min-height: 525px;
 }
 
-/*
-Screen - Game
-*/
-#gamescreen
-{
+/* Screen - Game */
+#gamescreen {
    position: absolute;
    width: 100%;
    height: 100%;
 }
 
-#sky
-{
+#sky {
    position: absolute;
    top: 0;
    width: 100%;
@@ -146,16 +135,14 @@ Screen - Game
    animation: animSky 7s linear infinite;
 }
 
-#flyarea
-{
+#flyarea {
    position: absolute;
    bottom: 0;
    height: 420px;
    width: 100%;
 }
 
-#ceiling
-{
+#ceiling {
    position: absolute;
    top: -16px;
    height: 16px;
@@ -167,8 +154,7 @@ Screen - Game
    animation: animCeiling 481ms linear infinite;
 }
 
-#land
-{
+#land {
    position: absolute;
    bottom: 0;
    width: 100%;
@@ -182,22 +168,19 @@ Screen - Game
    animation: animLand 2516ms linear infinite;
 }
 
-#bigscore
-{
+#bigscore {
    position: absolute;
    top: 20px;
    left: 150px;
    z-index: 100;
 }
 
-#bigscore img
-{
+#bigscore img {
    display: inline-block;
    padding: 1px;
 }
 
-#splash
-{
+#splash {
    position: absolute;
    opacity: 0;
    top: 75px;
@@ -208,8 +191,7 @@ Screen - Game
    background-repeat: no-repeat;
 }
 
-#scoreboard
-{
+#scoreboard {
    position: absolute;
    display: none;
    opacity: 0;
@@ -223,8 +205,7 @@ Screen - Game
    z-index: 1000;
 }
 
-#medal
-{
+#medal {
    position: absolute;
    opacity: 0;
    top: 114px;
@@ -233,8 +214,7 @@ Screen - Game
    height: 44px;
 }
 
-#currentscore
-{
+#currentscore {
    position: absolute;
    top: 105px;
    left: 107px;
@@ -243,13 +223,11 @@ Screen - Game
    text-align: right;
 }
 
-#currentscore img
-{
+#currentscore img {
    padding-left: 2px;
 }
 
-#highscore
-{
+#highscore {
    position: absolute;
    top: 147px;
    left: 107px;
@@ -258,13 +236,11 @@ Screen - Game
    text-align: right;
 }
 
-#highscore img
-{
+#highscore img {
    padding-left: 2px;
 }
 
-#replay
-{
+#replay {
    position: absolute;
    opacity: 0;
    top: 205px;
@@ -274,8 +250,7 @@ Screen - Game
    cursor: pointer;
 }
 
-.boundingbox
-{
+.boundingbox {
    position: absolute;
    display: none;
    top: 0;
@@ -285,14 +260,12 @@ Screen - Game
    border: 1px solid red;
 }
 
-#player
-{
+#player {
    left: 60px;
    top: 200px;
 }
 
-.bird
-{
+.bird {
    position: absolute;
    width: 34px;
    height: 24px;
@@ -302,10 +275,9 @@ Screen - Game
    animation: animBird 300ms steps(4) infinite;
 }
 
-.pipe
-{
+.pipe {
    position: absolute;
-   left: -100px;
+   left: 900px; /* Start position for pipes */
    width: 52px;
    height: 100%;
    z-index: 10;
@@ -314,8 +286,7 @@ Screen - Game
    animation: animPipe 7500ms linear;
 }
 
-.pipe_upper
-{
+.pipe_upper {
    position: absolute;
    top: 0;
    width: 52px;
@@ -324,8 +295,7 @@ Screen - Game
    background-position: center;
 }
 
-.pipe_upper:after
-{
+.pipe_upper:after {
    content: "";
    position: absolute;
    bottom: 0;
@@ -334,8 +304,7 @@ Screen - Game
    background-image: url('../assets/pipe-down.png');
 }
 
-.pipe_lower
-{
+.pipe_lower {
    position: absolute;
    bottom: 0;
    width: 52px;
@@ -344,31 +313,8 @@ Screen - Game
    background-position: center;
 }
 
-.pipe_lower:after
-{
+.pipe_lower:after {
    content: "";
    position: absolute;
    top: 0;
    width: 52px;
-   height: 26px;
-   background-image: url('../assets/pipe-up.png');
-}
-
-#footer
-{
-   position: absolute;
-   bottom: 3px;
-   left: 3px;
-}
-
-#footer a,
-#footer a:link,
-#footer a:visited,
-#footer a:hover,
-#footer a:active
-{
-   display: block;
-   padding: 2px;
-   text-decoration: none;
-   color: #fff;
-}
