--- a/css/main.css
+++ b/css/main.css
@@ -50,19 +50,19 @@
 }
 
 @-webkit-keyframes animPipe {
-   0% { left: 900px; } /* Start further to the right */
+   0% { left: 100vw; } /* Start further to the right */
    100% { left: -100px; }
 }
 @-moz-keyframes animPipe {
-   0% { left: 900px; }
+   0% { left: 100vw; }
    100% { left: -100px; }
 }
 @-o-keyframes animPipe {
-   0% { left: 900px; }
+   0% { left: 100vw; }
    100% { left: -100px; }
 }
 @keyframes animPipe {
-   0% { left: 900px; } /* Start further to the right */
+   0% { left: 100vw; } /* Start further to the right */
    100% { left: -100px; }
 }
 
@@ -277,7 +277,7 @@ body {
 
 .pipe {
    position: absolute;
-   left: 900px; /* Start position for pipes */
+   left: 100vw; /* Start position for pipes */
    width: 52px;
    height: 100%;
    z-index: 10;
@@ -299,8 +299,8 @@ body {
    content: "";
    position: absolute;
    bottom: 0;
-   width: 52px;
-   height: 26px;
+   width: 52px
+      height: 26px;
    background-image: url('../assets/pipe-down.png');
 }
 
@@ -318,3 +318,6 @@ body {
    position: absolute;
    top: 0;
    width: 52px;
+   height: 26px;
+   background-image: url('../assets/pipe-down.png');
+}
