--- a/css/main.css
+++ b/css/main.css
@@ -50,19 +50,19 @@
 }
 
 @-webkit-keyframes animPipe {
-   0% { left: 100vw; } /* Start further to the right */
+   0% { left: 900px; }
    100% { left: -100px; }
 }
 @-moz-keyframes animPipe {
-   0% { left: 100vw; }
+   0% { left: 900px; }
    100% { left: -100px; }
 }
 @-o-keyframes animPipe {
-   0% { left: 100vw; }
+   0% { left: 900px; }
    100% { left: -100px; }
 }
 @keyframes animPipe {
-   0% { left: 100vw; } /* Start further to the right */
+   0% { left: 900px; }
    100% { left: -100px; }
 }
 
@@ -83,13 +83,18 @@
    100% { background-position: -63px 0px; }
 }
 
+
 *,
 *:before,
-*:after {
+*:after
+{
+   /* border box */
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
+   /* gpu acceleration */
    -webkit-transition: translate3d(0,0,0);
+   /* select disable */
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
@@ -99,7 +104,8 @@
 }
 
 html,
-body {
+body
+{
    height: 100%;
    overflow: hidden;
    font-family: monospace;
@@ -107,21 +113,26 @@ body {
    color: #fff;
 }
 
-#gamecontainer {
+#gamecontainer
+{
    position: relative;
    width: 100%;
    height: 100%;
    min-height: 525px;
 }
 
-/* Screen - Game */
-#gamescreen {
+/*
+Screen - Game
+*/
+#gamescreen
+{
    position: absolute;
    width: 100%;
    height: 100%;
 }
 
-#sky {
+#sky
+{
    position: absolute;
    top: 0;
    width: 100%;
@@ -135,14 +146,16 @@ body {
    animation: animSky 7s linear infinite;
 }
 
-#flyarea {
+#flyarea
+{
    position: absolute;
    bottom: 0;
    height: 420px;
    width: 100%;
 }
 
-#ceiling {
+#ceiling
+{
    position: absolute;
    top: -16px;
    height: 16px;
@@ -154,7 +167,8 @@ body {
    animation: animCeiling 481ms linear infinite;
 }
 
-#land {
+#land
+{
    position: absolute;
    bottom: 0;
    width: 100%;
@@ -168,19 +182,22 @@ body {
    animation: animLand 2516ms linear infinite;
 }
 
-#bigscore {
+#bigscore
+{
    position: absolute;
    top: 20px;
    left: 150px;
    z-index: 100;
 }
 
-#bigscore img {
+#bigscore img
+{
    display: inline-block;
    padding: 1px;
 }
 
-#splash {
+#splash
+{
    position: absolute;
    opacity: 0;
    top: 75px;
@@ -191,7 +208,8 @@ body {
    background-repeat: no-repeat;
 }
 
-#scoreboard {
+#scoreboard
+{
    position: absolute;
    display: none;
    opacity: 0;
@@ -205,7 +223,8 @@ body {
    z-index: 1000;
 }
 
-#medal {
+#medal
+{
    position: absolute;
    opacity: 0;
    top: 114px;
@@ -214,7 +233,8 @@ body {
    height: 44px;
 }
 
-#currentscore {
+#currentscore
+{
    position: absolute;
    top: 105px;
    left: 107px;
@@ -223,11 +243,13 @@ body {
    text-align: right;
 }
 
-#currentscore img {
+#currentscore img
+{
    padding-left: 2px;
 }
 
-#highscore {
+#highscore
+{
    position: absolute;
    top: 147px;
    left: 107px;
@@ -236,11 +258,13 @@ body {
    text-align: right;
 }
 
-#highscore img {
+#highscore img
+{
    padding-left: 2px;
 }
 
-#replay {
+#replay
+{
    position: absolute;
    opacity: 0;
    top: 205px;
@@ -250,7 +274,8 @@ body {
    cursor: pointer;
 }
 
-.boundingbox {
+.boundingbox
+{
    position: absolute;
    display: none;
    top: 0;
@@ -260,12 +285,14 @@ body {
    border: 1px solid red;
 }
 
-#player {
+#player
+{
    left: 60px;
    top: 200px;
 }
 
-.bird {
+.bird
+{
    position: absolute;
    width: 34px;
    height: 24px;
@@ -275,9 +302,10 @@ body {
    animation: animBird 300ms steps(4) infinite;
 }
 
-.pipe {
+.pipe
+{
    position: absolute;
-   left: 100vw; /* Start position for pipes */
+   left: -100px;
    width: 52px;
    height: 100%;
    z-index: 10;
@@ -286,7 +314,8 @@ body {
    animation: animPipe 7500ms linear;
 }
 
-.pipe_upper {
+.pipe_upper
+{
    position: absolute;
    top: 0;
    width: 52px;
@@ -295,16 +324,18 @@ body {
    background-position: center;
 }
 
-.pipe_upper:after {
+.pipe_upper:after
+{
    content: "";
    position: absolute;
    bottom: 0;
-   width: 52px
-      height: 26px;
+   width: 52px;
+   height: 26px;
    background-image: url('../assets/pipe-down.png');
 }
 
-.pipe_lower {
+.pipe_lower
+{
    position: absolute;
    bottom: 0;
    width: 52px;
@@ -313,11 +344,31 @@ body {
    background-position: center;
 }
 
-.pipe_lower:after {
+.pipe_lower:after
+{
    content: "";
    position: absolute;
    top: 0;
    width: 52px;
    height: 26px;
-   background-image: url('../assets/pipe-down.png');
+   background-image: url('../assets/pipe-up.png');
+}
+
+#footer
+{
+   position: absolute;
+   bottom: 3px;
+   left: 3px;
+}
+
+#footer a,
+#footer a:link,
+#footer a:visited,
+#footer a:hover,
+#footer a:active
+{
+   display: block;
+   padding: 2px;
+   text-decoration: none;
+   color: #fff;
 }
